snapshots/care/data4life/hc-result-sdk-kmp/error/9d7a4ed/error-9d7a4ed.jar.sha512
78ebd227d68ea7432626f2c320ecbb31b7690d61a1f9d5289edf649645fdc790867b27a4fcbd5d4341fb3ead747adcd6f22f26cffda83f6768fdd4f4288e0eba